// Copyright [2026] [Joseph Verdicchio]
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// Copyright (c) 2026 Joseph Verdicchio and EvidenceOS Contributors
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package evidenceos.v1;

service EvidenceOS {
  rpc Health(HealthRequest) returns (HealthResponse);
  rpc CreateClaim(CreateClaimRequest) returns (CreateClaimResponse);
  rpc CreateClaimV2(CreateClaimV2Request) returns (CreateClaimV2Response);
  rpc CommitArtifacts(CommitArtifactsRequest) returns (CommitArtifactsResponse);
  rpc FreezeGates(FreezeGatesRequest) returns (FreezeGatesResponse);
  rpc SealClaim(SealClaimRequest) returns (SealClaimResponse);
  rpc ExecuteClaim(ExecuteClaimRequest) returns (ExecuteClaimResponse);
  rpc ExecuteClaimV2(ExecuteClaimV2Request) returns (ExecuteClaimV2Response);
  // v1 legacy endpoints preserved for backward compatibility.
  rpc GetCapsule(GetCapsuleRequest) returns (GetCapsuleResponse);
  // Returns daemon signing key material for in-band signature verification.
  rpc GetPublicKey(GetPublicKeyRequest) returns (GetPublicKeyResponse);
  rpc GetSignedTreeHead(GetSignedTreeHeadRequest) returns (GetSignedTreeHeadResponse);
  rpc GetInclusionProof(GetInclusionProofRequest) returns (GetInclusionProofResponse);
  rpc GetConsistencyProof(GetConsistencyProofRequest) returns (GetConsistencyProofResponse);
  rpc GetRevocationFeed(GetRevocationFeedRequest) returns (GetRevocationFeedResponse);
  // DiscOS-aligned endpoints.
  rpc FetchCapsule(FetchCapsuleRequest) returns (FetchCapsuleResponse);
  rpc RevokeClaim(RevokeClaimRequest) returns (RevokeClaimResponse);
  rpc WatchRevocations(WatchRevocationsRequest) returns (stream WatchRevocationsResponse);
}

message HealthRequest {}
message HealthResponse {
  string status = 1;
}

enum ClaimState {
  CLAIM_STATE_UNSPECIFIED = 0;
  CLAIM_STATE_UNCOMMITTED = 1;
  CLAIM_STATE_COMMITTED = 2;
  CLAIM_STATE_SEALED = 3;
  CLAIM_STATE_EXECUTING = 4;
  CLAIM_STATE_SETTLED = 5;
  CLAIM_STATE_CERTIFIED = 6;
  CLAIM_STATE_REVOKED = 7;
  CLAIM_STATE_TAINTED = 8;
  CLAIM_STATE_STALE = 9;
  CLAIM_STATE_FROZEN = 10;
}

enum Decision {
  DECISION_UNSPECIFIED = 0;
  DECISION_APPROVE = 1;
  DECISION_REJECT = 2;
  DECISION_DEFER = 3;
}

message CreateClaimRequest {
  bytes topic_id = 1;
  bytes holdout_handle_id = 2;
  bytes phys_hir_hash = 3;
  uint64 epoch_size = 4;
  uint32 oracle_num_symbols = 5;
  double alpha = 6;
  uint64 access_credit = 7;
}

message CreateClaimResponse {
  bytes claim_id = 1;
  ClaimState state = 2;
}

message ClaimMetadataV2 {
  string lane = 1;
  uint32 alpha_micros = 2;
  string epoch_config_ref = 3;
  string output_schema_id = 4;
}

message TopicSignalsV2 {
  bytes semantic_hash = 1;
  bytes phys_hir_signature_hash = 2;
  bytes dependency_merkle_root = 3;
}

message CreateClaimV2Request {
  string claim_name = 1;
  ClaimMetadataV2 metadata = 2;
  TopicSignalsV2 signals = 3;
  string holdout_ref = 4;
  uint64 epoch_size = 5;
  uint32 oracle_num_symbols = 6;
  uint64 access_credit = 7;
}

message CreateClaimV2Response {
  bytes claim_id = 1;
  bytes topic_id = 2;
  ClaimState state = 3;
}

message Artifact {
  bytes artifact_hash = 1;
  string kind = 2;
}

message CommitArtifactsRequest {
  bytes claim_id = 1;
  repeated Artifact artifacts = 2;
  bytes wasm_module = 3;
}

message CommitArtifactsResponse {
  ClaimState state = 1;
}

message FreezeGatesRequest {
  bytes claim_id = 1;
}

message FreezeGatesResponse {
  ClaimState state = 1;
}

message SealClaimRequest {
  bytes claim_id = 1;
}

message SealClaimResponse {
  ClaimState state = 1;
}

message ExecuteClaimRequest {
  bytes claim_id = 1;
  Decision decision = 2;
  repeated uint32 reason_codes = 3;
  bytes canonical_output = 4;
}

message ExecuteClaimResponse {
  ClaimState state = 1;
  bytes capsule_hash = 2;
  uint64 etl_index = 3;
}

message ExecuteClaimV2Request {
  bytes claim_id = 1;
}

message ExecuteClaimV2Response {
  ClaimState state = 1;
  Decision decision = 2;
  repeated uint32 reason_codes = 3;
  bytes canonical_output = 4;
  double e_value = 5;
  bool certified = 6;
  bytes capsule_hash = 7;
  uint64 etl_index = 8;
}

message GetCapsuleRequest {
  bytes claim_id = 1;
}

message GetCapsuleResponse {
  bytes capsule_bytes = 1;
  bytes capsule_hash = 2;
  uint64 etl_index = 3;
}

message GetPublicKeyRequest {
  // Optional key identifier; when empty, returns the active key.
  bytes key_id = 1;
}

message GetPublicKeyResponse {
  bytes ed25519_public_key = 1;
  // Key identifier is sha256(ed25519_public_key).
  bytes key_id = 2;
}

message GetSignedTreeHeadRequest {}

message GetSignedTreeHeadResponse {
  uint64 tree_size = 1;
  bytes root_hash = 2;
  bytes signature = 3;
  bytes key_id = 4;
}

message GetInclusionProofRequest {
  uint64 leaf_index = 1;
}

message GetInclusionProofResponse {
  bytes leaf_hash = 1;
  repeated bytes sibling_hashes = 2;
  bytes root_hash = 3;
}

message GetConsistencyProofRequest {
  uint64 first_tree_size = 1;
  uint64 second_tree_size = 2;
}

message GetConsistencyProofResponse {
  bool consistent = 1;
  bytes first_root_hash = 2;
  bytes second_root_hash = 3;
}

message GetRevocationFeedRequest {}

message GetRevocationFeedResponse {
  repeated RevocationEntry entries = 1;
  bytes signature = 2;
  bytes key_id = 3;
}

message SignedTreeHead {
  uint64 tree_size = 1;
  bytes root_hash = 2;
  bytes signature = 3;
  bytes key_id = 4;
}

message MerkleInclusionProof {
  bytes leaf_hash = 1;
  uint64 leaf_index = 2;
  uint64 tree_size = 3;
  repeated bytes audit_path = 4;
}

message MerkleConsistencyProof {
  uint64 old_tree_size = 1;
  uint64 new_tree_size = 2;
  repeated bytes path = 3;
}

message FetchCapsuleRequest {
  bytes claim_id = 1;
}

message FetchCapsuleResponse {
  bytes capsule_bytes = 1;
  bytes capsule_hash = 2;
  uint64 etl_index = 3;
  SignedTreeHead signed_tree_head = 4;
  MerkleInclusionProof inclusion_proof = 5;
  MerkleConsistencyProof consistency_proof = 6;
  bytes root_hash = 7;
  uint64 tree_size = 8;
}

message RevokeClaimRequest {
  bytes claim_id = 1;
  string reason = 2;
}

message RevokeClaimResponse {
  ClaimState state = 1;
  uint64 timestamp_unix = 2;
}

message WatchRevocationsRequest {}

message RevocationEntry {
  bytes claim_id = 1;
  uint64 timestamp_unix = 2;
  string reason = 3;
}

message WatchRevocationsResponse {
  repeated RevocationEntry entries = 1;
  bytes signature = 2;
  SignedTreeHead signed_tree_head = 3;
  bytes key_id = 4;
}
